--- a/Frugl/Frugl/Views/Itemization/CreateExpense/CreateExpense.storyboard
+++ b/Frugl/Frugl/Views/Itemization/CreateExpense/CreateExpense.storyboard
@@ -24,6 +24,7 @@
                                     <constraint firstAttribute="height" constant="55" id="xxQ-7K-PLH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-Bold" family="Bodoni 72 Oldstyle" pointSize="45"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zd3-JR-hci">
